# pico_w_sensors

AHT10/: CMakeLists.txt  aht10_sensor.c
AHT10_ILI9341/: AHT10_ILI9341.c  CMakeLists.txt
AHT10_ILI9341/lib/aht10/: CMakeLists.txt  aht10.c  aht10.h
AHT10_ILI9341/lib/ili9341/: ili9341.c  ili9341.h
BH1750/: CMakeLists.txt  bh1750_basic.c
BH1750_SG90/: CMakeLists.txt  bh1750_sg90.c
DHT22/: CMakeLists.txt  dht22_hum_temp_sensor.c
DHT22/lib/dht22/: dht.c
ESP32_LORA/: ESP32_LoRA_Receiver.ino
GY_NEO6MV2_GPS/: CMakeLists.txt  gy_neo6mv2_gps.c
GY_NEO6MV2_ILI9341_DISPLAY/: CMakeLists.txt  gy_neo6mv2_ili9341_tft_display.c
GY_NEO6MV2_ILI9341_DISPLAY/lib/gfx/: CMakeLists.txt  gfx.h
GY_NEO6MV2_ILI9341_DISPLAY/lib/ili9341/: ili9341.c
GY_NEO6MV2_SDCARD_SPI/: CMakeLists.txt  gy_beo6mv2_sdcard_spi.c
INA219/: CMakeLists.txt  ina219_current_sensor.c
INA219/lib/ina219/: ina219.c  ina219.h
MAX_30102_OXI_BAT/: CMakeLists.txt  gy_max30100.c
MAX_30102_OXI_BAT/lib/max30100/: max30100.c  max30100.h
MPU6050_ILI9341/: CMakeLists.txt  mpu6050_ili9341.c
MPU6050_ILI9341/lib/gfx/: gfx.c
MPU6050_ILI9341/lib/ili9341/: CMakeLists.txt
MPU6050_SG90/: CMakeLists.txt  mpu6050_sg90.c
MULTIFUNCTIONAL_DATALOGGER/: CMakeLists.txt  FreeRTOSConfig.h
MULTIFUNCTIONAL_DATALOGGER/lib/dht22/: dht.c  dht.h
MULTIFUNCTIONAL_DATALOGGER/lib/max30102/: max30102.c  max30102.h
MULTIFUNCTIONAL_DATALOGGER/lib/tcs34725/: tcs34725.c  tcs34725.h
MULTIFUNCTIONAL_DATALOGGER/src/: CMakeLists.txt  hw_config.c  multifunctional_datalogger.c
RFID_RC522/: CMakeLists.txt  rfid_rc522.c
RFM95_LORA/: CMakeLists.txt  RFM95_LoRa.c
SDCARD_SPI/: CMakeLists.txt  sdcard_spi.c
SG90/: CMakeLists.txt  servo_calibration.c  servo_controller.c
TCS34727_COLOR_SENSOR/: CMakeLists.txt  TCS34725_color_sensor.c
VL53L0X/: CMakeLists.txt  vl53l0x.c
VL53L0X_RFM95_LORA/: CMakeLists.txt  vl53l0x_rfm95_lora.c
VL53L0X_RFM95_LORA/lib/: rfm95_lora.c  rfm95_lora.h
VL53L0X_SDCARD_SPI/: CMakeLists.txt  VL53L0X_SDCARD_SPI.c
spi_display_ili9341/: CMakeLists.txt  tftspi_display.c
spi_display_ili9341/lib/ili9341/: ili9341.h
